# imt_frankas

./: README.md
imt_frankas_config/: CMakeLists.txt  package.xml
imt_frankas_config/config/: panda1_3j_control_node.yaml  panda1_3j_controllers.yaml  panda1_4j_control_node.yaml  panda1_4j_controllers.yaml  panda1_control_node.yaml  panda1_controllers.yaml  panda2_control_node.yaml  panda2_controllers.yaml
imt_frankas_config/launch/: franka1_gazebo.launch  moveit_pandas.launch  panda1_control_moveit_rviz.launch  panda_3j_generic.launch  panda_4j_generic.launch  panda_generic.launch  start_panda1_3j_panda2_effort.launch  start_panda1_3j_panda2_position.launch  start_panda1_4j_panda2_effort.launch  start_panda1_4j_panda2_position.launch  start_pandas.launch  start_pandas_effort.launch  start_pandas_velocity.launch  view_rosbag.launch
imt_frankas_config/robots/: panda_arm_3j.urdf  panda_arm_3j.xacro  panda_arm_3j.xacro.urdf  panda_arm_3j_hand_table.urdf.xacro  panda_arm_3j_table.urdf  panda_arm_3j_table.urdf.xacro  panda_arm_4j.urdf  panda_arm_4j.xacro  panda_arm_4j_hand_table.urdf.xacro  panda_arm_4j_table.urdf  panda_arm_4j_table.urdf.xacro  panda_arm_hand_table.urdf.xacro  panda_arm_table.urdf.xacro  table.xacro
panda1_moveit_config/: CMakeLists.txt  package.xml
panda1_moveit_config/config/: chomp_planning.yaml  fake_controllers.yaml  hand.xacro  joint_limits.yaml  panda_arm.srdf.xacro  panda_arm.xacro  panda_arm_hand.srdf.xacro  panda_controllers.yaml  panda_gripper_controllers.yaml
panda2_moveit_config/: CMakeLists.txt  package.xml
(+52 files in other folders)
