<?xml version="1.0"?>
<package format="2">
  <name>imt_frankas_config</name>
  <version>0.0.0</version>
  <description>Config and launch files to use two Franka Emika Pandas either in
  simulation or as a real robot simultaneously.</description>

  <maintainer email="franka2@todo.todo">franka2</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>franka_control</build_depend>
  <build_depend>franka_description</build_depend>
  <build_depend>franka_gazebo</build_depend>
  <build_depend>panda1_moveit_config</build_depend>
  <build_depend>panda2_moveit_config</build_depend>
  <build_export_depend>franka_control</build_export_depend>
  <build_export_depend>franka_description</build_export_depend>
  <build_export_depend>franka_gazebo</build_export_depend>
  <build_export_depend>panda1_moveit_config</build_export_depend>
  <build_export_depend>panda2_moveit_config</build_export_depend>
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_gazebo</exec_depend>
  <exec_depend>panda1_moveit_config</exec_depend>
  <exec_depend>panda2_moveit_config</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
